# ai-tutor-backend

./: .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  README.md  alembic.ini  env.example  initialize_curriculum.py  migrations.sh  pyproject.toml  run_backend.sh  test_phase4_tts.py  test_phase6_analytics.py
alembic/: env.py
alembic/versions/: 4f74cb7aa29a_add_comprehensive_student_tracking_.py  545aefc087ac_add_learning_graph_models_for_phase_3.py  5f3218fd589d_add_audio_tts_preferences_to_learning_.py  6b8c677c9c4f_add_start_time_and_end_time_to_sessions.py  8339f09cdb03_add_course_enrollment_table.py  bba7062c42b0_add_learning_graph_models_fixed_import.py  e08e15d3acf9_initial_migration.py  f4df727ef4a9_initial_migration.py
app/: __init__.py  database.py  main.py
app/api/: __init__.py  adaptive_learning.py  ai_analytics.py  ai_tutor.py  analytics.py  auth.py  courses.py  progress_tracking.py  sessions.py  student_tracking.py  users.py  websocket.py
app/conversation/: __init__.py  context_manager.py  dialogue_engine.py  response_generator.py  state.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  analytics.py  course.py  enrollment.py  learning_graph.py  session.py  user.py
app/schemas/: __init__.py  ai_tutor.py  course.py  enrollment.py  progress_tracking.py  session.py  user.py
app/services/: __init__.py  ai_analytics_service.py  ai_tutor_service.py  analytics_dashboard_service.py  audio_service.py  bubble_evaluation_service.py  conversation_service.py  curriculum_initializer.py  graph_service.py  learning_analytics_service.py  learning_graph_service.py  progress_tracking_service.py  session_service.py  student_tracking_service.py  tts_service.py
app/utils/: __init__.py  ai_utils.py
app/websocket/: __init__.py  connection_manager.py  lesson_handler.py
lesson_graphs/: python_curriculum.py
scripts/: seed_data.py  test_ask_gpt.py  test_bubble_graph.py  test_bubble_graph_simple.py  test_connection.py  test_graph_only.py
