[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tutor-backend"
version = "0.1.0"
description = "AI Tutor Backend - Real-time teaching pipeline"
authors = [{name = "AI Tutor Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "openai>=1.3.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "asteval>=0.9.0",
    "numpy>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"] 